# GauXC

./: CMakeLists.txt  polaris_install.sh
attic/src/integrator/cuda/: gauxc-cuda_integrator.cmake
attic/src/new_integrator/device/cuda/: gauxc-cuda.cmake
attic/tests/: collocation_cuda.hpp
cmake/: gauxc-dep-versions.cmake  gauxc-exchcxx.cmake
include/gauxc/: xc_integrator.hpp
src/: CMakeLists.txt  grid_impl.hpp
src/load_balancer/device/cuda/: replicated_cuda_load_balancer.cxx
src/load_balancer/host/: load_balancer_host_factory.cxx
src/reduction_driver/device/: CMakeLists.txt
src/runtime_environment/device/cuda/: CMakeLists.txt
src/xc_integrator/local_work_driver/device/cuda/: CMakeLists.txt
src/xc_integrator/local_work_driver/device/cuda/obara_saika/test/: CMakeLists.txt
src/xc_integrator/local_work_driver/host/: CMakeLists.txt  reference_local_host_work_driver.cxx
tests/: collocation_cuda.hpp  standalone_driver.cxx  weights_cuda.hpp
tests/ref_data/: ut_input.inp
